Mozilla scrollbar fix attempt.

--- a/css/styles.processed.css
+++ b/css/styles.processed.css
@@ -9,6 +9,7 @@ html {
   -webkit-text-size-adjust: 100%;
   background: #fff;
   color: #666;
+  overflow: -moz-scrollbars-none;
 }
 
 body {
